rep-commission-lwc/force-app/main/default/objects/Commission_Tier__c/Commission_Tier__c.object-meta.xml
<CustomObject>
    <label>Commission Tier</label>
    <nameField>
        <displayFormat>TIER-{0000}</displayFormat>
        <label>Tier Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>