rep-commission-lwc/force-app/main/default/objects/Commission_Tier__c/fields/Lowest_of_Funded_Unit_Against_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Lowest_of_Funded_Unit_Against_Eligible__c</fullName>
    <label>Lower Bound (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>