rep-commission-lwc/force-app/main/default/objects/Commission_Tier__c/fields/Payout_Type__c.field-meta.xml
<CustomField>
    <fullName>Payout_Type__c</fullName>
    <label>Payout Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Percent</fullName><default>false</default><label>Percent</label></value>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Percentage</fullName><default>false</default><label>Percentage</label></value>
            <value><fullName>FlatDollar</fullName><default>false</default><label>Flat Dollar</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>