rep-commission-lwc/force-app/main/default/objects/Commission_Tier__c/fields/Plan_Tier_Payout__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tier_Payout__c</fullName>
    <label>Tier Payout</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>