rep-commission-lwc/force-app/main/default/objects/Commission_Tier__c/fields/Upper_of_Funded_Units_Against_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Upper_of_Funded_Units_Against_Eligible__c</fullName>
    <label>Upper Bound (%)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>